kubernetes/hello_world_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: hello-world-service
  name: hello-world-service
spec:
  selector:
    app: hello-world
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
