kubernetes/hello_world_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: hello-world-service
          servicePort: 80
